# casadi_vio

./: CMakeLists.txt  package.xml
config/: qualisys_driver_params.yaml  realsense_vio.rviz  rs_vio.json  rs_vio_dark.json
launch/: qualisys.launch.py  replay.launch.py  rs.launch.py
scripts/: barfoot_ransac.py  depth_from_pc.py  feature_depth_sync.py  feature_points.py  feature_points_CaOptimizer.py  feature_points_f2f.py  feature_points_pnpransac.py  feature_points_pnpransac_debug.py  feature_points_wip.py  points_w_alg.py  run.py  run_barfoot.py  run_barfoot_debug.py  voLib.py  voLib_debug.py
